--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,8 @@
-// Raleway:wght@300;400;600
 body {
     background-color: #7E7E7E;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr 2fr;
+    grid-template-rows: 1fr 4fr 1fr;
     grid-template-areas: 
     "header"
     "main"
@@ -27,6 +26,22 @@ body {
                 font-weight: 300;
             }
         }
+        nav {
+            display: flex;
+            justify-content: space-around;
+            text-align: center;
+
+            font-family: 'Rubik', sans-serif;
+            font-weight: 300;
+            .nav {
+                color: white;
+            }
+            .nav:hover {
+                cursor: pointer;
+            }
+            #positionWheater {}
+            #worldWheater {}
+        }
     }
     main {
         grid-area: main;
@@ -37,34 +52,31 @@ body {
         section {
             text-align: center;
             font-family: 'Rubik', sans-serif;
-            .town {
+            #town {
                 font-weight: 600;
                 font-size: 38px;
             }
-            .date {
+            #date {
                 margin-top: 15px;
                 margin-bottom: 30px;
 
                 font-weight: 400;
                 font-size: 18px;
             }
-            .degree {
+            #degree {
                 font-weight: 600;
                 font-size: 55px;
             }
-            p {
+            #icon {
                 margin-top: 30px;
-                margin-bottom: 25px;
-
-                font-weight: 400;
-                font-size: 38px;
+                margin-bottom: 10px;
             }
-            .wheater {
+            #wheater {
                 font-weight: 600;
                 color: white;
                 font-size: 16px;
             }
-            .min-max {
+            #min-max {
                 margin-top: 15px;
 
                 font-weight: 400;
@@ -75,5 +87,21 @@ body {
     }
     footer {
         grid-area: footer;
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+        .forcast {
+            color: white;
+            font-family: 'Rubik', sans-serif;
+            font-weight: 300;
+            img {}
+            p:nth-child(2) {
+                margin-top: 5px;
+                margin-bottom: 5px;
+            }
+        }
+        .one {}
+        .two {}
+        .three {}
     }
 }
