--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ body main section {
   text-align: center;
   font-family: "Rubik", sans-serif;
   border-radius: 20px;
-  background-color: #afafaf;
+  background-color: rgba(175, 174, 174, 0.6);
   padding: 10px;
 }
 body main section #town {
@@ -133,7 +133,7 @@ body footer section .forcast {
   font-family: "Rubik", sans-serif;
   font-weight: 300;
   font-size: 12px;
-  background-color: #afafaf;
+  background-color: rgba(175, 174, 174, 0.6);
   padding: 5px;
   margin-bottom: 50px;
   border-radius: 10px;
@@ -141,4 +141,4 @@ body footer section .forcast {
 body footer section .forcast p:nth-child(2) {
   margin-top: 5px;
   margin-bottom: 5px;
-}
+}/*# sourceMappingURL=style.css.map */
