--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,5 @@
+$grey-opacity : rgba(175, 174, 174, 0.!);
+
 body {
   background-size: cover;
   background-position: center;
@@ -96,7 +98,7 @@ body {
       font-family: "Rubik", sans-serif;
 
       border-radius: 20px;
-      background-color: #afafaf;
+      background-color: $grey-opacity;
       padding: 10px;
       #town {
         font-weight: 600;
@@ -144,7 +146,7 @@ body {
         font-family: "Rubik", sans-serif;
         font-weight: 300;
         font-size: 12px;
-        background-color: #afafaf;
+        background-color: $grey-opacity;
         padding: 5px;
         margin-bottom: 50px;
         border-radius: 10px;
